Added github link

--- a/Week 14/index.html
+++ b/Week 14/index.html
@@ -112,6 +112,8 @@
             </ul>
             <p>Good luck and have fun collecting dragons!</p>
             </div>
+            <p>Have an issue or want to suggest changes? Head over to the github page by clicking on the link below</p>
+            <p><a target="_blank" href="https://github.com/edwardsja/WDD-330-Web-Frontend-II">GitHub Link</a></p>
         </div>
         <div id='delete_progress' class='delete-progress'>
             <div class="first-warning button" id="first_warning">Reset Progress</div>
